// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocxLoader > should aggregate content correctly > aggregated_content 1`] = `
"简单报告

副标题

轻点或点按此占位符文本并开始键入即可开始。你可以在 Mac、iPad、iPhone 或 iCloud.com 上查看和编辑此文稿。

轻松编辑文本、更改字体以及添加精美的图形。使用段落样式来使整篇文稿保持一致的风格。例如，此段落使用“正文”样式。你可以在“格式”控制的“文本”标签页中更改样式。

若要添加照片、图像画廊、音频片段、视频、图表或任意 700 多种可自定义形状，请在工具栏中轻点或点按其中一个插入按钮，或者将对象拖放到页面中。你可以分层放置对象、调整其大小以及将其放在页面中的任意位置。若要更改对象随文本移动的方式，请选择对象并随后轻点或点按“格式”控制中的“排列”标签页。

小标题

Pages 文稿可用于文字处理和页面布局。此“简单报告”模板为文字处理而设置，如此一来，文本便会随着你的键入而从某一页流向下一页，到达页面末尾时会自动创建新的页面。

在页面布局文稿中，你可以手动重新排列页面并随意调整页面中的文本框、图像和其他对象的位置。若要创建页面布局文稿，请在模板选取器中选取一种页面布局模板。你也可以在 Mac、iPad 或 iPhone 上将此文稿改为页面布局，方法是在“文稿”控制中关闭“文稿正文”。

“这是一个引用（报告中的关键短语）的例子。轻点或点按此文本添加你自己的内容。”









这是第二页的内容

"
`;

exports[`DocxLoader > should load pages correctly from a DOCX file 1`] = `
[
  {
    "charCount": 587,
    "lineCount": 29,
    "metadata": {
      "pageNumber": 1,
    },
    "pageContent": "简单报告

副标题

轻点或点按此占位符文本并开始键入即可开始。你可以在 Mac、iPad、iPhone 或 iCloud.com 上查看和编辑此文稿。

轻松编辑文本、更改字体以及添加精美的图形。使用段落样式来使整篇文稿保持一致的风格。例如，此段落使用“正文”样式。你可以在“格式”控制的“文本”标签页中更改样式。

若要添加照片、图像画廊、音频片段、视频、图表或任意 700 多种可自定义形状，请在工具栏中轻点或点按其中一个插入按钮，或者将对象拖放到页面中。你可以分层放置对象、调整其大小以及将其放在页面中的任意位置。若要更改对象随文本移动的方式，请选择对象并随后轻点或点按“格式”控制中的“排列”标签页。

小标题

Pages 文稿可用于文字处理和页面布局。此“简单报告”模板为文字处理而设置，如此一来，文本便会随着你的键入而从某一页流向下一页，到达页面末尾时会自动创建新的页面。

在页面布局文稿中，你可以手动重新排列页面并随意调整页面中的文本框、图像和其他对象的位置。若要创建页面布局文稿，请在模板选取器中选取一种页面布局模板。你也可以在 Mac、iPad 或 iPhone 上将此文稿改为页面布局，方法是在“文稿”控制中关闭“文稿正文”。

“这是一个引用（报告中的关键短语）的例子。轻点或点按此文本添加你自己的内容。”









这是第二页的内容

",
  },
]
`;
